tests/typechecker/should_fail/module_instances_10.csp
module M
exports
    y = 0

    x = N::c
endmodule

module N
exports
c = {}
g = global
endmodule

instance M1 = M

global = M1::y
